# Digital-media

./: README.md
digital_media/Managment_tools/: Agendasformeetings.docx  Projectjournal.docx  Sprint backlogs.xlsx
digital_media/Scripts/: astar_spoof.py  capture_spoofer.py  coord_pub.py  draw.py  draw_route.py  img_pub.py  sim_run.py
digital_media/Software/New_MarkerLocator/: MarkerCaptureROS.py  MarkerLocatorCV3.py  MarkerLocatorROS.py  PerspectiveTransform.py  readme.txt  setup.py
digital_media/Software/New_MarkerLocator/launch/: CaptureOnly.launch  cap_spoof.launch  drone_scouting.launch  drone_scouting_locators.launch  markerlocator_kh_office.launch  markerlocator_robolab.launch  readme
digital_media/Software/New_MarkerLocator/patterns/: patterns.tex
digital_media/Software/New_MarkerLocator/udp_server/: UDPClient.py  UDPServer.py
digital_media/Software/feature_detection/: CMakeLists.txt  README  featureDetection_v1_3.py  featureDetection_v1_3.py.save  featureDetection_v1_4.py  package.xml
digital_media/Software/feature_detection/backup/feature_detection/: featureDetection_v1_3.py
digital_media/Software/feature_detection/msg/: coord.msg
digital_media/Software/pathplanning/: CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt.save  package.xml  talker.cpp
digital_media/Software/pathplanning/backup/ver1/: CMakeLists.txt  astar.cpp  astar.h  astarPP.cpp
digital_media/Software/pathplanning/backup/ver2/: astarPP.cpp  coordTrans.cpp
digital_media/Software/pathplanning/backup/ver2.5(not_working)/: astar.cpp  astarPP.cpp  astarPP.cpp.autosave  pathplanningControl.cpp
digital_media/Software/pathplanning/include/pathplanning/: astar.cpp  astar.h  coordTrans.h  pathplanningControl.h
digital_media/Software/pathplanning/msg/: coord.msg  markerpose.msg
digital_media/Software/pathplanning/src/: astar.cpp  astarPP.cpp  coordTrans.cpp  pathplanningControl.cpp.autosave  trans_test.cpp
digital_media/Test_results/Different_obstacle_courses/: coursewidth
digital_media/Test_results/Different_obstacle_courses/course1/: r_v1.txt  testoutput1.txt
digital_media/Test_results/Different_obstacle_courses/course10/: matrix.txt  r_v1.txt  testoutput1.txt
digital_media/Test_results/Different_obstacle_courses/course2/: matrix.txt  r_v1.txt  testoutput1.txt
digital_media/Test_results/Different_obstacle_courses/course3/: matrix.txt  testoutput1.txt
digital_media/Test_results/Different_obstacle_courses/course4/: r_v1.txt  testoutput1.txt
digital_media/Test_results/Different_obstacle_courses/course5/: matrix.txt  testoutput1.txt
digital_media/Test_results/Different_obstacle_courses/course6/: matrix.txt  testoutput1.txt
digital_media/Test_results/Different_obstacle_courses/course7/: matrix.txt  testoutput1.txt
digital_media/Test_results/Frobit_movement/: coords.ods
digital_media/Test_results/Frobit_movement/t1/: coords.ods
digital_media/Test_results/coords_precision/: Test_results.ods
(+99 files in other folders)
