<?xml version="1.0"?>
<package>
  <name>feature_detection</name>
  <version>0.0.0</version>
  <description>The feature_detection package</description>

  <maintainer email="t.g.j@sol.dk">Thor G. Jensen</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>msgs</run_depend>

</package>
