<?xml version="1.0"?>
<package>
  <name>pathplanning</name>
  <version>0.0.0</version>
  <description>The pathplanning package</description>

  <maintainer email="mark@todo.todo">mark</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_msgs/Image.msg</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>

<!-- Setting up dynamic reconfigure for a node from ros tutorial http://wiki.ros.org/dynamic_reconfigure/Tutorials/SettingUpDynamicReconfigureForANode -->
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <build_depend>driver_base</build_depend>
  <run_depend>driver_base</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
